<resources>
    <string name="app_name">Application Sante</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="utilisateur_fragment">Utilisateur</string>
    <string name="liste_utilisateur_fragment">Liste des utilisateurs</string>
    <string name="ajouter_un_utilisateur">Ajouter un utilisateur</string>
    <string name="modifier_un_utilisateur">Modifier un utilisateur</string>
    <string name="liste_des_metiers">Liste des métiers</string>
    <string name="ajouter_un_metier">Ajouter un métier</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="age">Age</string>
    <string name="metier">Métier</string>
    <string name="service">Service</string>
    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="autre">Autre</string>
    <string name="email">Email</string>
    <string name="telephone">Téléphone</string>
    <string name="cv">CV</string>

    <string name="ok">Ok</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="ajouter">ajouter</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <string name="numero_incorrect">Le numéro entré est incorrect</string>
    <string name="champ_incorrect">Un des champs est vide ou incorrect</string>
    <string name="verification_suppression">Êtes vous sur de vouloir supprimer ?</string>

    <string name="options">Options</string>
    <string name="aide">Aide</string>
    <string name="preferences">Préférences</string>
    <string name="retour">Retour</string>
    <string name="aucun_utilisateur">Aucun utilisateur</string>
    <string name="crash">Crash</string>

    <string-array name="metiers">
        <item>Infirmier</item>
        <item>Médecin</item>
        <item>Brancardier</item>
        <item>Aide-Soignant</item>
    </string-array>

    <string-array name="services">
        <item>Neurologie</item>
        <item>Cardiologie</item>
        <item>Urgence</item>
        <item>Accueil</item>
        <item>Chirurgie</item>
    </string-array>
</resources>
